@@ -354,6 +354,7 @@ plugins/actions/styleeditor/Makefile
 plugins/actions/textcorrection/Makefile
 plugins/actions/timemodemanagement/Makefile
 plugins/actions/timingfromplayer/Makefile
+plugins/actions/typewriter/Makefile
 plugins/actions/videoplayermanagement/Makefile
 plugins/actions/viewmanager/Makefile
 plugins/actions/wavefrommanagement/Makefile
